Fixed unwanted&irrelevant scrollbar in popunder

--- a/css/main.css
+++ b/css/main.css
@@ -217,7 +217,7 @@ footer a:hover {
 	position: absolute;
 	top: 60px;
 	width: 100%;
-	height: 100%;
+	height: calc(100% - 60px);
 	z-index: 2;
 	pointer-events: none;
 }
